<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SASAbus</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="account_settings">Account settings</string>
    <string name="changelog">Changelog</string>
    <string name="stations">Bus stops</string>
    <string name="pick_stations">Pick a bus stop</string>
    <string name="refresh">Refresh</string>
    <string name="map">Map</string>
    <string name="eco_points">Eco points</string>
    <string name="bus_lines">Bus lines</string>
    <string name="lines">Lines</string>
    <string name="route">Route</string>
    <string name="lines_detail">Line details</string>
    <string name="lines_path">Line path</string>
    <string name="news">News</string>
    <string name="activity_credits">Credits</string>
    <string name="support">Support</string>
    <string name="help_feedback">Help and feedback</string>
    <string name="parking">Parking</string>
    <string name="search">Search</string>
    <string name="course_details">Course details</string>
    <string name="trips">Trips</string>
    <string name="trip_details">Trip details</string>
    <string name="bus_details">Bus details</string>
    <string name="timetables">Timetables</string>
    <string name="route_results">Route results</string>
    <string name="route_details">Route details</string>
    <string name="survey">Survey</string>
    <string name="merano">Merano</string>
    <string name="bolzano">Bolzano</string>
    <string name="line">Line</string>
    <string name="line_format">Line %s</string>
    <string name="info" translatable="false">Info</string>
    <string name="additional_info">Additional information:</string>
    <string name="lines_driving">Driving Lines</string>
    <string name="lines_all">All Lines</string>
    <string name="unknown">unknown</string>
    <string name="all">All</string>
    <string name="general">General</string>
    <string name="none">None</string>
    <string name="changelog_version">Version</string>
    <string name="favorites">Favorites</string>
    <string name="search_label">Bus stops</string>
    <string name="title_search">Search</string>
    <string name="search_hint">Search bus stops</string>
    <string name="done_button">Done</string>
    <string name="save_button">Save</string>
    <string name="retry">Retry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_changelog_subtitle">Version</string>
    <string name="about_feedback_title" translatable="false">Feedback</string>
    <string name="about_feedback_subtitle">Send us a bug report or a suggestion</string>
    <string name="about_credits_title" translatable="false">Credits</string>
    <string name="about_credits_subtitle">Developers and libraries</string>
    <string name="about_policy_title">Privacy Policy</string>
    <string name="about_policy_subtitle">Open in browser</string>
    <string name="credits_developers">Developers</string>
    <string name="credits_copyright" translatable="false">Copyright</string>
    <string name="credits_copyright_sub">
        <![CDATA[© 2015–2016 David Dejori & Alex Lardschneider\nAll rights reserved. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, without the prior written permission of the publishers.]]></string>
    <string name="credits_community">Beta tester</string>
    <string name="credits_email" translatable="false">android@sasabz.it</string>
    <string name="credits_alex_title" translatable="false">Alex Lardschneider</string>
    <string name="credits_alex_sub">App developer</string>
    <string name="credits_david_title" translatable="false">David Dejori</string>
    <string name="credits_david_sub">Server developer</string>
    <string name="credits_appcompat_title" translatable="false">AppCompat</string>
    <string name="credits_appcompat_sub" translatable="false">Google Inc.</string>
    <string name="credits_okhttp_title" translatable="false">OkHttp</string>
    <string name="credits_okhttp_sub" translatable="false">Square</string>
    <string name="credits_crashlytics_title" translatable="false">Crashlytics</string>
    <string name="credits_crashlytics_sub" translatable="false">Fabric</string>
    <string name="credits_altbeacon_title" translatable="false">Altbeacon for Android</string>
    <string name="credits_altbeacon_sub" translatable="false">Altbeacon</string>
    <string name="credits_retrofit_title" translatable="false">Retrofit</string>
    <string name="credits_retrofit_sub" translatable="false">Square</string>
    <string name="credits_license_apache" translatable="false">Apache License, Version 2.0</string>
    <string name="credits_license_title">Open source licenses</string>
    <string name="settings_general">Language</string>
    <string name="settings_data">Data and Internet</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_advanced">Identification</string>
    <string name="preferences_menu_appearance_title">Language</string>
    <string name="preferences_menu_map_title">Map</string>
    <string name="preferences_menu_advanced_title">Advanced</string>
    <string name="preferences_menu_beacons_title" translatable="false">Beacons</string>
    <string name="preferences_menu_notifications_title">Notifications</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_sub">Change language</string>
    <string name="settings_maptype_title">Map type</string>
    <string name="settings_maptype_sub">Change map type</string>
    <string name="settings_map_refresh">Marker refresh</string>
    <string name="settings_map_auto_title">Auto refresh</string>
    <string name="settings_map_auto_sub">Automatically refresh bus positions on map</string>
    <string name="settings_map_auto_interval_title">Update interval</string>
    <string name="settings_map_auto_interval_sub">Change marker update interval</string>
    <string name="settings_beacons_enable_title">Enable beacons</string>
    <string name="settings_beacons_enable_sub">Get information about buses and bus stops</string>
    <string name="settings_beacons_help_sub">Bluetooth is required to search for beacons</string>
    <string name="settings_beacons_bus_enabled_title">Buses</string>
    <string name="settings_beacons_bus_enabled_sub">Notifications of nearby buses</string>
    <string name="settings_beacons_station_enabled_title">Bus stops</string>
    <string name="settings_beacons_station_enabled_sub">Notifications of nearby bus stops</string>
    <string name="settings_beacons_station_vibration_sub">Vibrate when a bus stop is nearby</string>
    <string name="settings_trips_enabled_title">Trips</string>
    <string name="settings_trips_enabled_sub">Notifications of completed trips</string>
    <string name="settings_fetch_images_title">Download bus stop photos</string>
    <string name="settings_fetch_images_sub">Select when to download photos</string>
    <string name="settings_station_ids_title">Display the numerical ID of a bus stop</string>
    <string name="settings_station_ids_sub">Show bus stop IDs</string>
    <string name="settings_news_push_sub">Notifications of timetable changes</string>
    <string name="settings_notifications_vibrations">Vibration</string>
    <string name="settings_survey_category">Surveys</string>
    <string name="settings_survey_enable_title">Enable surveys</string>
    <string name="settings_survey_enable_summary">You will get a notification when completing a
        trip. You then can give feedback and vote the service.
    </string>
    <string name="settings_survey_interval_title">Survey interval</string>
    <string name="settings_survey_interval_summary">The survey will appear only once during the
        selected interval.
    </string>
    <string name="route_departure">Departure</string>
    <string name="route_arrival">Arrival</string>
    <string name="route_recent">Recent searches</string>
    <string name="route_result_default">5 results</string>
    <string name="route_walk_default">5’ walk</string>
    <string name="station_details">Bus stop details</string>
    <string name="station_select">Select</string>
    <string name="station_no_lines">No lines</string>
    <string name="station_tab_list">List</string>
    <string name="station_nearby_action">Details</string>
    <string name="station_menu_cancel">Cancel</string>
    <string name="station_menu_line">Line</string>
    <string name="station_menu_course">Route</string>
    <string name="station_nearby_text">Nearby bus stops</string>
    <string name="station_heading">Heading to %s</string>
    <string name="list_lines_station">Bus stop</string>
    <string name="list_lines_delay">Delay</string>
    <string name="line_current_stop">Now at %s</string>
    <string name="line_heading">Heading to %s</string>
    <string name="bus_not_in_service_short">Not in service</string>
    <string name="bus_depot">Depot</string>
    <string name="hydrogen_buses">H₂ buses</string>
    <string name="bus_id">#%d</string>
    <string name="bus_specifications">Specifications</string>
    <string name="bus_report">Report a problem in this bus</string>
    <string name="bottom_sheet_heading">Heading to %s</string>
    <string name="bottom_sheet_delayed">%d\' delayed</string>
    <string name="bottom_sheet_early">%d\' ahead</string>
    <string name="bottom_sheet_punctual">Punctual</string>
    <string name="bottom_sheet_last_updated">Updated %d\' ago</string>
    <string name="bottom_sheet_trip">Trip #%d</string>
    <string name="bottom_sheet_variant">Variant #%d</string>
    <string name="bottom_sheet_vehicle_id">Bus #%d</string>
    <string name="bottom_sheet_current_stop">Now at %s</string>
    <string name="bottom_sheet_line">LINE</string>
    <string name="bottom_sheet_vehicle">VEHICLE</string>
    <string name="bottom_sheet_course">COURSE</string>
    <string name="map_snackbar_update">Update</string>
    <string name="map_snackbar_view">View</string>
    <string name="bus_details_not_available">Not available</string>
    <string name="bus_details_manufacturer">Manufacturer</string>
    <string name="bus_details_model">Model</string>
    <string name="bus_detail_id" translatable="false">ID</string>
    <string name="bus_details_fuel">Fuel</string>
    <string name="bus_details_color">Color</string>
    <string name="trip_details_from">From</string>
    <string name="survey_title_header">Surveys help us to improve our bus service by analysing
        opinions and complains by our customers. Please tell us how you perceived this bus ride or
        how we can improve our service. Thanks.
    </string>
    <string name="survey_title_rate">How would you rate your experience on the bus?</string>
    <string name="survey_title_form">Please provide your email address so we can contact you.
    </string>
    <string name="survey_form_submit">Submit</string>
    <string name="survey_form_feedback">Feedback (optional)</string>
    <string name="rating_title1">Do you enjoy SasaBus?</string>
    <string name="rating_positive1">Yes</string>
    <string name="rating_negative1">Not really</string>
    <string name="planned_trips">Planned trips</string>
    <string name="dialog_report_email">Your email</string>
    <string name="dialog_report_content">Explain your problem</string>
    <string name="dialog_report_screenshot">Add screenshot</string>
    <string name="dialog_change_password_old">Old password</string>
    <string name="dialog_change_password_new_1">New password</string>
    <string name="dialog_change_password_new_2">Repeat new password</string>
</resources>