<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/survey_title_header"
                android:textColor="@color/text_primary"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/survey_title_rate"
                android:textColor="@color/text_primary"/>

            <RatingBar
                android:id="@+id/survey_rating_bar"
                style="?attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:stepSize="1"/>

            <TextView
                android:id="@+id/survey_rating_bar_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6dp"
                android:gravity="end"
                android:textColor="@color/primary_teal"
                android:textSize="12sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/survey_title_form"
                android:textColor="@color/text_primary"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/survey_form_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/black_400"
                android:theme="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextInputLayout.Hint">

                <EditText
                    android:id="@+id/survey_form_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_report_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_default"
                    android:textColorHint="@color/black_400"
                    android:textSize="14sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/black_400"
                android:theme="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextInputLayout.Hint">

                <EditText
                    android:id="@+id/survey_form_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/survey_form_feedback"
                    android:textColor="@color/text_default"
                    android:textColorHint="@color/black_400"
                    android:textSize="14sp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/survey_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/survey_form_submit"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
