<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_report_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:textColorHint="@color/black_400"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayout.Hint">

            <EditText
                android:id="@+id/dialog_report_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_report_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_default"
                android:textColorHint="@color/black_400"
                android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_report_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/black_400"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayout.Hint">

            <EditText
                android:id="@+id/dialog_report_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_report_content"
                android:textColor="@color/text_default"
                android:textColorHint="@color/black_400"
                android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/dialog_report_screenshot_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/dialog_report_screenshot"
            android:textColor="@color/primary_teal"/>

        <ImageView
            android:id="@+id/dialog_report_screenshot"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="@color/primary_teal"
            android:src="@drawable/ic_collections_white_48dp"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>